2011-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2011-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (GetModuleHandleExW): Define.
	* dlfcn.cc: Throughout mark exported symbols as extern "C".
	(dlopen): Unignore flags argument.  Define ret to NULL.  Fix typo in
	comment.  Support Glibc flags RTLD_NOLOAD and RTLD_NODELETE.
	* include/dlfcn.h:  Clean up comments.
	(RTLD_NODELETE): Define.
	(RTLD_NOLOAD): Define.
	(RTLD_DEEPBIND): Define.

2011-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* pipe.cc (pipe): Just call _pipe with O_BINARY mode.  Move code to
	generate normalized pathnames from here...
	(_pipe): ...to here.

2011-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.cc (CreatePipeOverlapped): New function.
	(ReadPipeOverlapped): Ditto.
	(WritePipeOverlapped): Ditto.
	* miscfuncs.h: Declare new functions.
	* pinfo.cc (commune_process): Call WritePipeOverlapped instead of
	WriteFile.  Set timeout to 1 sec.
	(_pinfo::commune_request): Call ReadPipeOverlapped instead of ReadFile.
	Set timeout to 0.5 secs.
	* sigproc.cc (sig_send): Create pipe using CreatePipeOverlapped.

2011-08-12  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* miscfuncs.cc (create_pipe): Delete obsolete function.
	* miscfuncs.h (create_pipe): Delete define.

	* pipe.c (fhandler_pipe::create_selectable): Delete obsolete comment.

2011-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (fhandler_proc::closedir): Don't free, but delete
	instead.

2011-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_proc::opendir): Declare.
	(fhandler_proc::closedir): Declare.
	* fhandler_proc.cc (fhandler_proc::opendir): New method.  Fetch list
	of active processes here once to avoid potential duplicates and store
	in dir->__handle.
	(fhandler_proc::closedir): New method.  Free dir->__handle.
	(fhandler_proc::readdir): Convert pinfo into a reference to the winpids